# SignCheck

./: .gitignore  Cargo.toml  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
examples/: basic_check.rs
scripts/: copy_and_sign_cmd.ps1  copy_and_sign_firefox.ps1  create_self_signed_and_sign.ps1  create_self_signed_ps1_and_sign.ps1
src/: error.rs  lib.rs  main.rs  signer_info.rs  tests.rs  utils.rs  verification.rs  win32_guards.rs
test_apps/self_signed/: Cargo.toml
test_apps/self_signed/src/: main.rs
